# CPlayground

./: .gitmodules  Algorithm.h  Animation.c  Animation.h  AssetManager.c  AssetManager.h  Bitset.h  Bitset128.h  CMakeLists.txt  CPlayground.10x  Camera.h  Common.h  Compile.bat  GLTFParser.c  GLTFParser.h  Graphics.c  Graphics.h  IO.h  Main.c  Main.ilk  Memory.h  Platform.c  Platform.h  Queue.h  README.md  Random.h  RedBlackTree.c  RedBlackTree.h  ShaderCompile.bat
Math/: Color.h  Half.h  Math.h  Matrix.h  Quaternion.h  SIMD.h  Vector.h
Shaders/: Cube.glsl  Cube.glsl.h
